Finalized the app

--- a/.env.template
+++ b/.env.template
@@ -5,7 +5,7 @@ POSTGRES_USER=myuser
 POSTGRES_PASSWORD=CHANGEME
 POSTGRES_DB=mydb
 
-# Application Environment [development|production]
+# Application Environment [development|production|debug]
 GOAUTH_BACKDEV_MODE="development"
 
 # Application Secrets: Notification Service configuration: 
